Fix checkbox styling and label alignment
We only now apply the `span-columns` to text input fields and we add
checkbox/radio specific spacing so that everything lines up correctly.

This also involved adding padding to the labels so they line up with the
text inside the text inputs.

https://trello.com/c/YCKGZisp

--- a/administrate/app/assets/stylesheets/administrate/base/_forms.scss
+++ b/administrate/app/assets/stylesheets/administrate/base/_forms.scss
@@ -36,8 +36,8 @@ select {
   box-sizing: border-box;
   font-family: $form-font-family;
   font-size: $form-font-size;
-  margin-bottom: $base-spacing / 2;
-  padding: ($base-spacing / 3) ($base-spacing / 3);
+  margin-bottom: $small-spacing;
+  padding: $form-input-padding;
   transition: border-color;
   width: 100%;
 
