--- a/administrate/app/assets/stylesheets/administrate/base/_variables.scss
+++ b/administrate/app/assets/stylesheets/administrate/base/_variables.scss
@@ -102,3 +102,5 @@ $form-box-shadow: inset 0 1px 3px rgba(black,0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
 $form-font-size: $base-font-size;
 $form-font-family: $base-font-family;
+
+$form-input-padding: $base-spacing / 3;
